[package]
name = "wgpu003"
version = "0.1.0"
authors = ["zxhsure <zxhsure@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.28.6"
pollster = "0.3.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.30"
wgpu = { version = "0.17.0", features = ["webgl"]}
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = "1.0.0"
log = "0.4.14"
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
