[package]
name = "wgpu009"
version = "0.1.0"
authors = ["zxhsure <zxhsure@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.28.6"
pollster = "0.3.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.30"
wgpu = { version = "0.17.0", features = ["webgl"]}
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = "1.0.0"
log = "0.4.14"
wee_alloc = { version = "0.4.5", optional = true }
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
glam = "0.24"
reqwest = { version = "0.11" }
tobj = { version = "4.0.0", features = ["async"]}
getrandom = { version = "0.2", features = ["js"] }


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
